# mm-iot-zephyr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPERS.md  README.md  bitbucket-pipelines.yml  west-zephyr.yaml
boards/morsemicro/m2m_u575/: Kconfig.m2m_u575  board.cmake  board.yml  m2m_u575-common.dtsi  m2m_u575.dts  m2m_u575.yaml  m2m_u575_defconfig
boards/morsemicro/mm6108_ekh05_v3/: Kconfig.defconfig  Kconfig.mm6108_ekh05_v3  board.cmake  board.yml  mm6108_ekh05_v3.dts  mm6108_ekh05_v3.yaml  mm6108_ekh05_v3_defconfig  mm6108_ekh05_v3_pm.dts  mm6108_ekh05_v3_pm_defconfig
boards/morsemicro/mm6108_ekh05_v3/support/: openocd.cfg
boards/morsemicro/mm8108_ekh05/: Kconfig.defconfig  Kconfig.mm8108_ekh05  board.yml  mm8108_ekh05.dts  mm8108_ekh05.yaml  mm8108_ekh05_defconfig  mm8108_ekh05_pm.dts  mm8108_ekh05_pm_defconfig
boards/morsemicro/mm8108_ekh05/support/: openocd.cfg
boards/shields/morse_mmech08/: Kconfig.defconfig  Kconfig.shield  morse_mmech08.overlay
boards/shields/morse_mmech08/boards/: ek_ra6m5.overlay  nucleo_h753zi.overlay
boards/shields/morse_mmech18/: Kconfig.defconfig  Kconfig.shield  morse_mmech18.overlay
boards/shields/morse_mmech18/boards/: ek_ra6m5.conf  nrf5340dk_nrf5340_cpuapp.conf  nucleo_h753zi.overlay  nucleo_u575zi_q.overlay
components/: CMakeLists.txt
components/firmware/: CMakeLists.txt
components/libmorse/: CMakeLists.txt
components/libmorse/include/: mmhal.h  mmport.h
components/mmpktmem/: mmpktmem_static.c
components/mmutils/: CMakeLists.txt
components/morse_fs/: CMakeLists.txt
components/morse_fs/libmorse/: CMakeLists.txt
components/morse_fs/mmagic/: CMakeLists.txt  mmagic_controller.c  mmagic_controller.h  mmagic_datalink_controller.h  mmosal_controller.h
components/morse_fs/mmutils/: CMakeLists.txt
components/morse_sm/: CMakeLists.txt
components/morse_sm/firmware/: CMakeLists.txt  Kconfig
components/morse_sm/hostap/: CMakeLists.txt  Kconfig
components/morse_sm/libmorse/: CMakeLists.txt
components/morse_sm/libmorse/include/: mmhal.h  mmport.h
components/morse_sm/mmpktmem/: CMakeLists.txt  Kconfig
components/morse_sm/mmutils/: CMakeLists.txt
components/morse_sm/regdb/: CMakeLists.txt  Kconfig
components/regdb/: regdb.c
drivers/: CMakeLists.txt  Kconfig
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.stm32-optim  spi_ll_stm32_optim.c
drivers/wifi/: CMakeLists.txt  Kconfig
drivers/wifi/morse/: CMakeLists.txt  Kconfig.morse  morse.c  morse.h
drivers/wifi/morse/shims/: mmhal.c  mmosal_shim_zephyr.c  wlan_hal.c
drivers/wifi/morse_fs/: CMakeLists.txt  Kconfig.morse_fs  morse.c  morse.h
drivers/wifi/morse_fs/datalink_bus/: spi.c
drivers/wifi/morse_fs/shims/: CMakeLists.txt  mmhal.c  mmosal_controller.c  morse_log.h
drivers/wifi/morse_sm/: CMakeLists.txt  Kconfig.morse_sm  morse.c  morse.h  morse_log.h
drivers/wifi/morse_sm/shims/: mmhal.c  mmhal_wlan_binaries.c  mmosal_shim_zephyr.c  wlan_hal.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/spi/: st,stm32-spi-optim.yaml
dts/bindings/wifi/: morse,fs.yaml  morse,mm6108.yaml  morse,mm8108.yaml  morse,spi.yaml
samples/alpha_testing/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/alpha_testing/src/: main.c  mqtt.c  mqtt.h
samples/alpha_testing/tools/: mqtt-forwarder.sh
samples/fs_alpha_testing/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/fs_alpha_testing/src/: main.c  wifi.c  wifi.h
samples/halow_client/: CMakeLists.txt  prj.conf  sample.yaml
samples/halow_zperf/: prj.conf  sample.yaml
samples/halow_zperf/boards/: nucleo_h753zi.conf  nucleo_u575zi_q.overlay
samples/porting_assistant/: CMakeLists.txt  prj.conf  sample.yaml
samples/porting_assistant/src/: mm6108_reg.h  mmhal_log.c  porting_assistant.c  porting_assistant.h  test_hal.c  test_wlan_io.c
tools/: convert-bin-to-mbin.py
zephyr/: module.yml
